trying an overflow fix

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -17,7 +17,8 @@
         @media screen and (max-width: 500px) {
             margin-left: 10px;
             width: 150px;
-            margin-top: 0px;
+            position: relative;
+            top: 0px;
         }
         
     }
@@ -38,8 +39,7 @@
     .rmenu {
         position: absolute;
         right: -30px;
-        top: 1px;
-
+        top: 0px;
         img {
             height: 50px;
             fill: @primary-color;
