--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -449,6 +449,12 @@ body, html {
       @media screen and (max-width: 570px) {
         margin-left: 12%;
       }
+      @media screen and (max-width: 500px) {
+        width: 300px;
+      }
+      @media screen and (max-width: 360px) {
+        width: 260px;
+      }
 
       .top-heading {
         font-size: 30px;
