--- a/src/styles.less
+++ b/src/styles.less
@@ -6,6 +6,7 @@ body, html {
   font-family: @primary-font;
   padding: 0px !important;
   margin: 0px !important;
+  overflow-x: hidden;
 }
 a, button {
   cursor: pointer;
